--- a/index.html
+++ b/index.html
@@ -6,16 +6,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>PokeTrack</title>
-    <!-- #region Stylesheets -->
+<!-- #region Stylesheets -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,7 00&display=swap">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/mdb.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- endregion -->
+<!-- endregion -->
 </head>
 
 <body>
+
+    <header>
+<!--#region  Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+            <div class="container">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button 
+                    class="navbar-toggler" 
+                    type="button" 
+                    data-toggle="collapse" 
+                    data-target="#navbarTogglerDemo02"
+                    aria-controls="navbarTogglerDemo02" 
+                    aria-expanded="false" 
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav mr-auto smooth-scroll">
+                        <li class="nav-item">
+                            <a 
+                                class="nav-link" 
+                                href="#intro">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a 
+                                class="nav-link" 
+                                href="#about" 
+                                data-offset="90">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a 
+                                class="nav-link" 
+                                href="#projects" 
+                                data-offset="90">FAQ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a 
+                                class="nav-link" 
+                                href="#gallery" 
+                                data-offset="90">features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a 
+                                class="nav-link" 
+                                href="#contact"" 
+                                data-offset="30">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+<!-- #endregion -->
+<!--#region Full Page Intro -->
+        <div class="view">
+        <video 
+            class="video-intro" 
+            poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" 
+            playsinline 
+            autoplay
+            muted 
+            loop>
+        <source src="https://mdbootstrap.com/img/video/animation.mp4" type="video/mp4">
+        </video>
+        <div class="mask rgba-gradient d-flex justify-content-center align-items-center">
+            <div class="container px-md-3 px-sm-0">
+            <div class="row wow fadeIn">
+
+                <div class="col-md-12 mb-4 white-text text-center wow fadeIn">
+                <h3 class="display-3 font-weight-bold white-text mb-0 pt-md-5 pt-5">Creative Agency</h3>
+                <hr class="hr-light my-4 w-75">
+                <h4 class="subtext-header mt-2 mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit deleniti
+                    consequuntur nihil.</h4>
+                <a href="#!" class="btn btn-rounded btn-outline-white">
+                    <i class="fas fa-home "></i> Visit us
+                </a>
+                </div>
+
+            </div>
+
+            </div>
+        </div>
+        </div>
+<!-- #endregion -->
+    </header>
+
 
 <!-- #region Scripts -->
 <script type="text/javascript" src="js/jquery.min.js"></script>
@@ -24,6 +109,8 @@
 <script type="text/javascript" src="js/mdb.min.js"></script>
 <script type="text/javascript"></script>
 <!-- endregion -->
+
 </body>
+
 
 </html>
